--- a/eIVOGo/Views/DataView/Module/c0401_pos.cshtml
+++ b/eIVOGo/Views/DataView/Module/c0401_pos.cshtml
@@ -121,7 +121,7 @@
                         <p style="display: inline-block;padding: 2px 0px;margin: 0;font-size:8pt;line-height: 1.5">單價</p>
                     </td>
                     <td style="width:40%">
-                        <p style="display: inline-block;padding: 2px 0px;margin: 0;font-size:8pt;line-height: 1.5">小計</p>
+                        <p style="display: inline-block;padding: 2px 0px;margin: 0;font-size:8pt;line-height: 1.5">金額</p>
                     </td>
                 </tr>
                 @*<tr>
