--- a/eIVOGo/Views/DataView/convertdatatoallowance.cshtml
+++ b/eIVOGo/Views/DataView/convertdatatoallowance.cshtml
@@ -300,14 +300,14 @@
                                 品名：@(d.OriginalDescription)<br />
                                 數量：@(d.Quantity)<br />
                                 單價：@(d.UnitPrice)<br />
-                                金額(不含稅)：@(d.Amount)<br />
+                                金額(不含稅之進貨額)：@(d.Amount)<br />
                                 課稅別：TX
                             </text>
                         }
                     </p>
                     <p>
                         營業稅額合計：@(allowance.TaxAmount)<br />
-                        金額(含稅)合計：
+                        金額(不含稅之進貨額)合計：
                         @(allowance.TotalAmount)<br />
                     </p>
                     <p></p>
