--- a/eIVOGo/Views/Forms/B2BInvoice.cshtml
+++ b/eIVOGo/Views/Forms/B2BInvoice.cshtml
@@ -221,7 +221,7 @@
                     <th>品名</th>
                     <th>數量</th>
                     <th>單價</th>
-                    <th>小計</th>
+                    <th>金額</th>
                     <th>備註</th>
                     <th></th>
                 </tr>
@@ -236,7 +236,7 @@
         <tbody>
             <tr>
                 <td class="Bargain_btn">
-                    <button type="button" class="btn" onclick="uiInvoice.sum();">小計</button>
+                    <button type="button" class="btn" onclick="uiInvoice.sum();">金額</button>
                     <a class="btn" onclick="uiInvoice.commit(true);">發票預覽</a>
                     <button type="button" class="btn" onclick="uiInvoice.commit();">發票開立</button>
                     <button type="reset" class="btn">清除</button>
