--- a/eIVOGo/Views/Forms/SimpleInvoice.cshtml
+++ b/eIVOGo/Views/Forms/SimpleInvoice.cshtml
@@ -270,7 +270,7 @@
                     <th>品名</th>
                     <th>數量</th>
                     <th>單價</th>
-                    <th>小計</th>
+                    <th>金額</th>
                     <th>備註</th>
                     <th></th>
                 </tr>
@@ -285,7 +285,7 @@
         <tbody>
             <tr>
                 <td class="Bargain_btn">
-                    <a class="btn" onclick="uiInvoice.sum();">小計</a>
+                    <a class="btn" onclick="uiInvoice.sum();">金額</a>
                     <a class="btn" onclick="uiInvoice.commit(true);">發票預覽</a>
                     <a class="btn" onclick="uiInvoice.commit();">發票開立</a>
                     <button type="reset" class="btn">清除</button>
