--- a/eIVOGo/Views/Forms/simpleallowance.cshtml
+++ b/eIVOGo/Views/Forms/simpleallowance.cshtml
@@ -126,7 +126,7 @@
         <tbody>
             <tr>
                 <td class="Bargain_btn">
-                    <a class="btn" onclick="@(_formID).sum();">小計</a>
+                    <a class="btn" onclick="@(_formID).sum();">金額</a>
                     <a class="btn" onclick="@(_formID).commit();">開立</a>
                     <button type="reset" class="btn">清除</button>
                 </td>
