--- a/eIVOGo/Views/Notification/Custom/16844527/AllowanceNotification.cshtml
+++ b/eIVOGo/Views/Notification/Custom/16844527/AllowanceNotification.cshtml
@@ -62,7 +62,7 @@
         本公司平台並未提供申請紙本銷貨退回、進貨退出或折讓證明單。<br />
         若您尚有需要服務的地方，隨時歡迎來電或來信電子發票客服信箱。<br />
         委外客服信箱：ifs_service@uxb2b.com<br />
-        委外客服電話：0800-010-626<br />
+        @*委外客服電話：0800-010-626<br />*@
         <span style="color:red;">※ 本信件為系統自動發送 ( 請勿回信 )。</span>
     </p>
     <div style="text-align:center;color:grey;font-size:10pt;">
