--- a/eIVOGo/Views/Organization/Module/EditItem.cshtml
+++ b/eIVOGo/Views/Organization/Module/EditItem.cshtml
@@ -54,8 +54,10 @@
     $(function () {
         $global.commitOrganization = function () {
             $form = $('#editItem');
+            var $formData = $form.serializeObject();
+            $formData.CustomNotification = $('<div>').text($formData.CustomNotification).html();
             showLoading();
-            $.post('@Html.Raw(Url.Action("CommitItem","Organization",new { _viewModel.KeyID }))', $form.serializeObject(), function (data) {
+            $.post('@Html.Raw(Url.Action("CommitItem","Organization",new { _viewModel.KeyID }))', $formData, function (data) {
                 hideLoading();
                 if ($.isPlainObject(data)) {
                     if (data.result) {
