--- a/eIVOGo/Views/DataView/Module/C0401_GooglePlay.cshtml
+++ b/eIVOGo/Views/DataView/Module/C0401_GooglePlay.cshtml
@@ -88,7 +88,7 @@
                                 <p class="productname">品名</p>
                                 <p class="quantity">數量</p>
                                 <p class="price">單價</p>
-                                <p class="totalPrice">小計</p>
+                                <p class="totalPrice">金額</p>
                             </div>
                             @{ int _itemIdx;}
                             @for (_itemIdx = 0; _productItem != null && _itemIdx < Math.Min(_productItem.Length, _ItemPagingCount); _itemIdx++)
