--- a/eIVOGo/Views/DataView/Module/D0401.cshtml
+++ b/eIVOGo/Views/DataView/Module/D0401.cshtml
@@ -39,7 +39,7 @@
             }
             <p style="text-align:center">營業人銷貨退回、進貨退出<Br />或折讓證明單</p>
             <p style="text-align:center">@(String.Format("{0:yyyy-MM-dd}", _model.AllowanceDate))</p>
-            <p style="font-weight:bolder;">
+            <p>
                 賣方統編：@(_model.InvoiceAllowanceSeller.ReceiptNo)<br />
                 賣方名稱：@(_model.InvoiceAllowanceSeller.CustomerName)<br />
                 發票開立日期：@(String.Format("{0:yyyy-MM-dd}", details.InvoiceDate))<br />
@@ -69,7 +69,7 @@
                     }
                     else
                     {
-                        <text>金額(不含稅)：</text>
+                        <text>金額(不含稅之進貨額)：</text>
 
                     }
                     @(String.Format("{0:##,###,###,##0.##}", d.Amount))<br />
@@ -86,7 +86,7 @@
                 }
                 else
                 {
-                    <text>金額(不含稅)合計：</text>
+                    <text>金額(不含稅之進貨額)合計：</text>
                 }
                 @(String.Format("{0:##,###,###,##0.##}", _model.TotalAmount))<br />
             </p>
