--- a/eIVOGo/Views/DataView/Module/c0401_a4.cshtml
+++ b/eIVOGo/Views/DataView/Module/c0401_a4.cshtml
@@ -54,7 +54,7 @@
                 <span class="title">@(_model.InvoiceSeller.CustomerName)</span><br />
                 <p>
                     @(_model.InvoiceSeller.Address)<br />
-                    @(_model.Organization.OrganizationStatus.SetToOutsourcingCS == true ? "委外客服電話：0800-010-626" : "")
+                    @*@(_model.Organization.OrganizationStatus.SetToOutsourcingCS == true ? "委外客服電話：0800-010-626" : "")*@
                 </p>
             </div>
             <div class="customer">
@@ -115,7 +115,7 @@
                 <p class="productname">品名</p>
                 <p class="quantity">數量</p>
                 <p class="price">單價</p>
-                <p class="totalPrice">小計</p>
+                <p class="totalPrice">金額</p>
             </div>
             @{ int _itemIdx;}
             @for (_itemIdx = 0; _productItem != null && _itemIdx < Math.Min(_productItem.Length, _ItemPagingCount); _itemIdx++)
