--- a/eIVOGo/Views/Notification/Module/IssuedC0401.cshtml
+++ b/eIVOGo/Views/Notification/Module/IssuedC0401.cshtml
@@ -238,24 +238,24 @@
                 </p>
             }
         }
-    <p>
-        @if (eIVOGo.Properties.Settings.Default.ShowAuthorizationNoInMail)
-        {
-            <text>本公司奉財政部核准文號：</text>
-            <span class="blue">@(String.IsNullOrEmpty(_model.Organization.OrganizationStatus.AuthorizationNo) ? "臺北市國稅局信義分局100年7月22日財北國稅信義營業字第1000213452號" : _model.Organization.OrganizationStatus.AuthorizationNo)</span>
-            <text>，使用電子發票。</text>
-        }
-        @if (_model.Organization.OrganizationStatus.SetToNotifyCounterpartBySMS == true)
-        {
-            @(_model.InvoiceBuyer.IsB2C()
+        <p>
+            @if (eIVOGo.Properties.Settings.Default.ShowAuthorizationNoInMail)
+            {
+                <text>本公司奉財政部核准文號：</text>
+                <span class="blue">@(String.IsNullOrEmpty(_model.Organization.OrganizationStatus.AuthorizationNo) ? "臺北市國稅局信義分局100年7月22日財北國稅信義營業字第1000213452號" : _model.Organization.OrganizationStatus.AuthorizationNo)</span>
+                <text>，使用電子發票。</text>
+            }
+            @if (_model.Organization.OrganizationStatus.SetToNotifyCounterpartBySMS == true)
+            {
+                @(_model.InvoiceBuyer.IsB2C()
                     ? "本公司會以電子郵件將發票開立與中獎訊息通知客戶，如需索取紙本電子發票請回覆欲索取之電子發票號碼至：" + _model.Organization.ContactEmail + "，" + _model.Organization.CompanyName + "將於收到回覆後十個工作天內寄出該電子發票紙本證明聯。"
                     : "對於企業端電子發票用戶，如需列印，請點選上方「>請點此連結列印發票」即可使用企業所屬之帳號登入列印發票。" /*"，如需列印，請直接開啟附件之發票列印檔另行列印即可"*/)
-        }
-        else
-        {
-            <text>本公司會以電子郵件將發票開立與中獎訊息通知客戶，對於企業端電子發票用戶，如需列印，請直接開啟附件之發票列印檔另行列印即可。</text>
-        }
-    </p>
+            }
+            else
+            {
+                <text>本公司會以電子郵件將發票開立與中獎訊息通知客戶，對於企業端電子發票用戶，如需列印，請直接開啟附件之發票列印檔另行列印即可。</text>
+            }
+        </p>
         <p class="red">
             &nbsp;
         </p>
@@ -271,10 +271,16 @@
         <p>&nbsp;</p>
         @if (_model.Organization.OrganizationStatus.SetToOutsourcingCS == true)
         {
-            { 
-                    Html.RenderPartial("~/Views/Notification/Shared/ServiceNotation.cshtml", _model.Organization);
+            {
+                Html.RenderPartial("~/Views/Notification/Shared/ServiceNotation.cshtml", _model.Organization);
             }
 
+        }
+        @if (_model.Organization.OrganizationExtension?.CustomNotification != null)
+        {
+            <text>
+                @Html.Raw(_model.Organization.OrganizationExtension?.CustomNotification)
+            </text>
         }
         <p>&nbsp;</p>
         <p class="red">
