--- a/eIVOGo/Views/Notification/Module/allowanceexception.cshtml
+++ b/eIVOGo/Views/Notification/Module/allowanceexception.cshtml
@@ -16,64 +16,17 @@
 @using Model.Schema.EIVO
 @using Utility
 @using Uxnet.Web.WebUI
-@if (_model.Count() > 0)
-    {
-<div>
-    <table width="100%" border="0" cellpadding="0" cellspacing="0" class="left_title">
-        <tr>
-            <th class="Head_style_a">折　　讓
-            </th>
-        </tr>
-    </table>
-    <table class="table01 itemList">
-        <thead>
-            <tr>
-                <th>折讓號碼</th>
-                <th>開立人公司名稱</th>
-                <th>開立人統編</th>
-                <th>時間</th>
-                <th>錯誤訊息</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in _model)
-                {
-                    AllowanceRootAllowance dataItem = null;
-            <tr>
-                <td>
-                    <a href='@($"{eIVOGo.Properties.Settings.Default.WebApDomain}{VirtualPathUtility.ToAbsolute("~/Published/DumpExceptionLog.ashx")}?logID={item.LogID}")'
-                    target="_blank">
-                    @(item.IsCSV == true ? item.DataContent : (dataItem=getAllowanceContent(item.DataContent))?.AllowanceNumber)</a>
-                </td>
-                <td>
-                    @{ var receiptNo = dataItem?.SellerId;
-                        var orgItem = models.GetTable<Organization>().Where(o => o.ReceiptNo == receiptNo).FirstOrDefault();}
-
-                    @(orgItem?.CompanyName)
-                </td>
-                <td>@(receiptNo)</td>
-                <td>@($"{item.LogTime:yyyy/MM/dd HH:mm:ss}")</td>
-                <td>@(item.Message)</td>
-            </tr>
-            }
-        </tbody>
-    </table>
-</div>
-}
-<script runat="server">
+@{
 
     ModelSource<InvoiceItem> models;
     IQueryable<ExceptionLog> _model;
 
-    protected override void OnInit(EventArgs e)
-    {
-        base.OnInit(e);
+    models = ((SampleController<InvoiceItem>)ViewContext.Controller).DataSource;
+    _model = (IQueryable<ExceptionLog>)this.Model;
 
-        models = ((SampleController<InvoiceItem>)ViewContext.Controller).DataSource;
-        _model = (IQueryable<ExceptionLog>)this.Model;
-
-    }
-
+}
+@functions
+{
     protected AllowanceRootAllowance getAllowanceContent(String data)
     {
         try
@@ -88,6 +41,52 @@
             return null;
         }
     }
+}
+@if (_model.Count() > 0)
+{
+    <div>
+        <table width="100%" border="0" cellpadding="0" cellspacing="0" class="left_title">
+            <tr>
+                <th class="Head_style_a">
+                    折　　讓
+                </th>
+            </tr>
+        </table>
+        <table class="table01 itemList">
+            <thead>
+                <tr>
+                    <th>折讓號碼</th>
+                    <th>開立人公司名稱</th>
+                    <th>開立人統編</th>
+                    <th>時間</th>
+                    <th>錯誤訊息</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in _model)
+                {
+                    AllowanceRootAllowance dataItem = null;
+                    <tr>
+                        <td>
+                            <a href='@($"{eIVOGo.Properties.Settings.Default.WebApDomain}{VirtualPathUtility.ToAbsolute("~/Published/DumpExceptionLog.ashx")}?logID={item.LogID}")'
+                               target="_blank">
+                                @(item.IsCSV == true ? item.DataContent : (dataItem=getAllowanceContent(item.DataContent))?.AllowanceNumber)
+                            </a>
+                        </td>
+                        <td>
+                            @{ var receiptNo = dataItem?.SellerId;
+                                var orgItem = models.GetTable<Organization>().Where(o => o.ReceiptNo == receiptNo).FirstOrDefault();}
+
+                            @(orgItem?.CompanyName)
+                        </td>
+                        <td>@(receiptNo)</td>
+                        <td>@($"{item.LogTime:yyyy/MM/dd HH:mm:ss}")</td>
+                        <td>@(item.Message)</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+}
 
 
-</script>
