--- a/eIVOGo/Views/Notification/Module/issuedallowance.cshtml
+++ b/eIVOGo/Views/Notification/Module/issuedallowance.cshtml
@@ -39,5 +39,9 @@ else
     </p>
 }
 @{ Html.RenderPartial("~/Views/Notification/Module/AllowanceMailView.cshtml", _model);}
-
+@if (_model.Organization.OrganizationExtension?.CustomNotification != null)
+{
+    Write(new HtmlString(_model.Organization.OrganizationExtension?.CustomNotification));
+    <br />
+}
 信件寄送時間：@(DateTime.Now)
