--- a/eIVOGo/Views/Notification/Module/issuedc0501.cshtml
+++ b/eIVOGo/Views/Notification/Module/issuedc0501.cshtml
@@ -16,6 +16,15 @@
 @using Model.Schema.EIVO
 @using Utility
 @using Uxnet.Web.WebUI
+@{
+
+    ModelSource<InvoiceItem> models;
+    InvoiceItem _model;
+
+    models = ((SampleController<InvoiceItem>)ViewContext.Controller).DataSource;
+    _model = (InvoiceItem)this.Model;
+
+}
 
 <!DOCTYPE html>
 <html>
@@ -203,40 +212,33 @@
     <form>
         <!--交易畫面標題-->
         @if (!_model.Organization.OrganizationStatus.InvoiceNoticeSetting.CheckNotice(Naming.InvoiceNoticeStatus.UseCustomStyle))
-            {
-        <p>
-            您的客戶編號：<span class="blue">@(_model.InvoiceBuyer.CustomerID.StringMask(4, 3, '*'))</span> 發票已經作廢，以下為您的作廢電子發票內容：
-        </p>
+        {
+            <p>
+                您的客戶編號：<span class="blue">@(_model.InvoiceBuyer.CustomerID.StringMask(4, 3, '*'))</span> 發票已經作廢，以下為您的作廢電子發票內容：
+            </p>
         }
         <div class="border_gray" style="width:100%">
             <!--表格 開始-->
-            @{ Html.RenderPartial("~/Views/Notification/Module/C0501MailView.ascx", _model);}
+            @{ Html.RenderPartial("~/Views/Notification/Module/C0501MailView.cshtml", _model);}
 
             <!--表格 結束-->
         </div>
         <p>
             此張發票已由營業人上傳作廢，敬請確認。
         </p>
-        @{ Html.RenderPartial("~/Views/Notification/Shared/ServiceNotation.cshtml",_model.Organization);}
-
+        @if (_model.Organization.OrganizationExtension?.CustomNotification != null)
+        {
+            <text>
+                @Html.Raw(_model.Organization.OrganizationExtension?.CustomNotification)
+            </text>
+        }
+        else
+        {
+            Html.RenderPartial("~/Views/Notification/Shared/ServiceNotation.cshtml", _model.Organization);
+        }
         <!--按鈕-->
     </form>
 </body>
 </html>
 
-<script runat="server">
-
-    ModelSource<InvoiceItem> models;
-    InvoiceItem _model;
-
-    protected override void OnInit(EventArgs e)
-    {
-        base.OnInit(e);
-
-        models = ((SampleController<InvoiceItem>)ViewContext.Controller).DataSource;
-        _model = (InvoiceItem)this.Model;
-
-    }
-
-</script>
 
