--- a/eIVOGo/Views/Notification/issuec0501.cshtml
+++ b/eIVOGo/Views/Notification/issuec0501.cshtml
@@ -1,5 +1,3 @@
-
-
 @using System.Linq
 @using System.IO
 @using System.Linq.Expressions
@@ -16,41 +14,37 @@
 @using Model.Locale
 @using Utility
 @using Uxnet.Web.WebUI
-
-@if(_viewModel.ForTest==true)
-    {
-        Html.RenderPartial("~/Views/Notification/Module/IssuedC0501.ascx", _model);
-    }
-    else if (_model.Organization.OrganizationStatus.InvoiceNoticeSetting.CheckNotice(Naming.InvoiceNoticeStatus.Cancelling))
-    {
-        var mailing = models.GetUserListByCompanyID(_model.InvoiceBuyer.BuyerID)
-                .Select(u => u.EMail).ToList();
-        mailing.Add(_model.InvoiceBuyer.EMail);
-        var mailTo = String.Join(",",
-            mailing.Where(m => m != null));
-
-        if (!String.IsNullOrEmpty(mailTo))
-        {
-            String subject = _model.Organization.CompanyName + "作廢電子發票郵件通知";
-            String body = Html.Partial("~/Views/Notification/Module/IssuedC0501.ascx", _model).ToString();
-            body.SendMailMessage(mailTo, subject);
-        }
-
-    }
-<script runat="server">
+@{
 
     ModelSource<InvoiceItem> models;
     InvoiceItem _model;
     DocumentQueryViewModel _viewModel;
 
-    protected override void OnInit(EventArgs e)
-    {
-        base.OnInit(e);
 
-        models = ((SampleController<InvoiceItem>)ViewContext.Controller).DataSource;
-        _model = (InvoiceItem)this.Model;
-        _viewModel = (DocumentQueryViewModel)ViewBag.ViewModel;
+    models = ((SampleController<InvoiceItem>)ViewContext.Controller).DataSource;
+    _model = (InvoiceItem)this.Model;
+    _viewModel = (DocumentQueryViewModel)ViewBag.ViewModel;
+}
+
+@if (_viewModel.ForTest == true)
+{
+    Html.RenderPartial("~/Views/Notification/Module/IssuedC0501.cshtml", _model);
+}
+else if (_model.Organization.OrganizationStatus.InvoiceNoticeSetting.CheckNotice(Naming.InvoiceNoticeStatus.Cancelling))
+{
+    var mailing = models.GetUserListByCompanyID(_model.InvoiceBuyer.BuyerID)
+            .Select(u => u.EMail).ToList();
+    mailing.Add(_model.InvoiceBuyer.EMail);
+    var mailTo = String.Join(",",
+        mailing.Where(m => m != null));
+
+    if (!String.IsNullOrEmpty(mailTo))
+    {
+        String subject = _model.Organization.CompanyName + "作廢電子發票郵件通知";
+        String body = Html.Partial("~/Views/Notification/Module/IssuedC0501.cshtml", _model).ToString();
+        body.SendMailMessage(mailTo, subject);
     }
 
+}
 
-</script>
+
