[2023.06.29]:新增[電子發票號碼申請作業電子化]-網頁申請/Word套表及申請查詢

--- a/eIVOGo/Views/SiteAction/SysAdminMenu.cshtml
+++ b/eIVOGo/Views/SiteAction/SysAdminMenu.cshtml
@@ -128,9 +128,12 @@
                     <li>
                         <a href="@(VirtualPathUtility.ToAbsolute("~/BusinessRelationship/MaintainRelationship"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>相對營業人資料管理</a>
                     </li>
+                    <li>
+                        <a href="@Html.Raw(Url.Action("QueryIndex","InvoiceNumberApply"))"><i class="fa fa-hand-o-right" aria-hidden="true"></i>電子發票號碼申請</a>
+                    </li>
                     @*<li>
-                    <a href="@(VirtualPathUtility.ToAbsolute("~/SAM/SocialWelfareAgenciesManger.aspx"))">社福機構資料管理</a>
-                </li>*@
+            <a href="@(VirtualPathUtility.ToAbsolute("~/SAM/SocialWelfareAgenciesManger.aspx"))">社福機構資料管理</a>
+        </li>*@
                 </ul>
                 <!-- /.nav-second-level -->
             </li>
