[2023.10.17] 發票未上傳通知
1.匯出[當日發票未上傳]客戶xlsx列表
https://eguitest.uxifs.com/Intra01/Notification/NotifyInvoiceNotUploadList/YYYYMMDD
2.排程設定寄出[當日發票未上傳]Email通知營業人聯絡人
Model.Helper.InvoiceNotUploadNotification

--- a/eIVOGo/Views/Organization/Module/ItemForm.cshtml
+++ b/eIVOGo/Views/Organization/Module/ItemForm.cshtml
@@ -204,8 +204,11 @@
                     <th>
                         設定傳送發票對應資料
                     </th>
-                    <td colspan="3">
+                    <td>
                         <input type="checkbox" value="@($"{true}")" name="DownloadDataNumber" @(_viewModel.DownloadDataNumber == true ? "checked" : null) />使用傳送企業發票對應資料
+                    </td>
+                    <td colspan="2">
+                        <input type="checkbox" value="@($"{true}")" name="InvoiceNotUploadedAlert" @(_viewModel.InvoiceNotUploadedAlert == true ? "checked" : null) />未上傳發票時通知
                     </td>
                 </tr>
                 <tr>
